--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personalwebsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://noahmarestaing.github.io/personalwebsite",
+  "homepage": "https://ohdearmusics.github.io/personalwebsite",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
